2021-04-18 [1.0.1]
  * Fixed thumbnail and fanart images acquisition
2021-03-06 [1.0.0]
  * Basic python3 and Kodi19 support
2020-11-09 [0.0.15]
  * Added sub-categories for live streams
2020-10-29 [0.0.14]
  * Fixed live video stream playback
2020-10-14 [0.0.13]
  * Fixed access to categories recent, popular and exact show from kodi favourite list
2020-09-10 [0.0.12]
  * Prepend scheme to URL if not present
2020-03-30 [0.0.11]
  * Added Live stream support
  * Fixed quality selection
  * Added notifications for unavailable video and unmet quality restriction
2019-12-09 [0.0.10]
  * Fixed UTF-8 encoded URLs
2019-10-05 [0.0.9]
  * Added support for slovak version sk.mall.tv
  * Added country select setting
  * Fixed popular category paging
  * Missing popular category replaced by trending videos
  * Renamed categories according to website
  * Added fanart for shows and categories
  * Get thumbnails in better quality
2019-02-15 [0.0.8]
  * Added possibility to choose format (HLS/MP4) - thx bbaronSVK
2018-10-30 [0.0.7]
  * Added go to button to context menu in new/popular 
  * Added slovak translation
2018-10-25 [0.0.6]
  * Added season folders to shows
2018-10-23 [0.0.5]
  * Added some metadata to list items
  * Added content type to routes
  * Fixed recent with live videos
2018-10-15 [0.0.4]
  * Added recent videos
  * Added popular videos
2018-10-12 [0.0.3]
  * Fixed default quality
2018-10-12 [0.0.2]
  * Added max_quality setting
  * Fixed 18+ videos
2018-10-11 [0.0.1]
  * First draft