@@ -1,3 +1,5 @@
+2021-10-24 [1.0.2]
+  * Fixed mandatory addon resources (icon and fanart)
 2021-04-18 [1.0.1]
   * Fixed thumbnail and fanart images acquisition
 2021-03-06 [1.0.0]
